Added Loading Functionality

--- a/src/App.css
+++ b/src/App.css
@@ -134,6 +134,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 10px;
 }
 
 .searchInput {
@@ -213,4 +214,26 @@ button:hover {
   height: 180px;
   object-fit: cover;
   border-radius: 10px;
+}
+
+/* Loading Animation CSS */
+.loading-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Full viewport height */
+}
+
+.loading-spinner {
+  border: 4px solid rgba(255, 255, 255, 0.3);
+  border-top: 4px solid black; /* Change the color to your preferred loading color */
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
